updated the projects page

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                         <a href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" class="social-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <p class="mt-3">&copy; 2025 Edda Ósk Óskarsdóttir. All rights reserved.</p>
+                        <p class="mt-3">&copy; <span class="js-current-year"></span> Edda Ósk Óskarsdóttir. All rights reserved.</p>
                     </div>
                 </div>
             </div>
