--- a/projects.html
+++ b/projects.html
@@ -46,18 +46,74 @@
                         <h1 class="display-4">My Projects</h1>
                     </div>
                 </div>
-                <div class="row g-4">
-                    <!-- Project Card Template -->
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card h-100">
-                            <img src="placeholder-image.jpg" class="card-img-top" alt="Project 1" />
-                            <div class="card-body">
-                                <h5 class="card-title">Project Title</h5>
-                                <p class="card-text">Project description goes here.</p>
-                            </div>
+                <div class="project-list">
+                    <!-- Example project row template (image left on desktop, stacked on mobile) -->
+                    <div class="row align-items-center g-5 project-row">
+                        <!-- Image column -->
+                        <div class="col-12 col-lg-6">
+                            <!-- Replace src with your image path in the img/ folder -->
+                            <img src="img/juiceorganic.png" class="img-fluid rounded" alt="JuicOrganic project overview" />
+                        </div>
+
+                        <!-- Text column -->
+                        <div class="col-12 col-lg-6">
+                            <h3 class="h2 mb-3">JuicOrganic – <em>“Say Yes to Less Plastic”</em> | SaaS-solution</h3>
+                            <p>For our 2nd-semester exam project, we developed a SaaS-based concept for JuicOrganic’s transition from B2B to B2C. The solution centered on a smart vending machine that offers sustainable juice refills and promotes eco-friendly habits through digital interactivity.</p>
+                            <p>
+                                <strong>My contributions:</strong><br />
+                                I worked on <strong>UX research</strong> (interviews, personas, user journeys, and data analysis), <strong>information architecture</strong>, and <strong>front-end coding</strong> using JavaScript, HTML, SCSS, and Bootstrap. Additionally, I created the <strong>After Effects video</strong> used as the vending machine’s <strong>promotional video</strong> and social media campaign element.
+                            </p>
+                            <p>The result was a <strong>user-centered</strong> prototype <strong>combining</strong> sustainability, accessibility, and technology in a cohesive digital experience.</p>
+                            <p class="mb-0"><strong>Coded prototype</strong> <a href="https://eddaosk.github.io/JuicOrganic/index.html" class="link-primary">here</a></p>
                         </div>
                     </div>
-                    <!-- Add more project cards as needed -->
+
+                    <!-- Hoedown After Dark -->
+                    <div class="row align-items-center g-5 project-row">
+                        <div class="col-12 col-lg-6">
+                            <img src="img/juiceorganic.png" class="img-fluid rounded" alt="Hoedown After Dark – Queer Cowboy Apparel project" />
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <h3 class="h2 mb-3">Hoedown After Dark - Queer Cowboy Apparel | E‑commerce Project</h3>
+                            <p>For this project, we developed <em>Hoedown After Dark</em> — a queer and kink‑inspired fashion brand celebrating self‑expression, club culture, and community. The concept merges Western aesthetics with techno and fetish influences to create a bold, subversive visual identity.</p>
+                            <p>
+                                <strong>My contributions:</strong><br />
+                                I managed the group project process using a Kanban board and worked on SEO, business modelling, persuasive design, Figma prototyping, and product development. I also contributed to SoMe content and visual identity design.
+                            </p>
+                            <p>The result was a strong brand identity and tested product designs developed through the Lean Startup method, real‑world feedback, and close engagement with Copenhagen’s queer community. All earnings from the project were donated to LGBT Asylum.</p>
+                        </div>
+                    </div>
+
+                    <!-- Das Büro – Digital Design Studio -->
+                    <div class="row align-items-center g-5 project-row">
+                        <div class="col-12 col-lg-6">
+                            <img src="img/juiceorganic.png" class="img-fluid rounded" alt="Das Büro – Digital Design Studio client cases" />
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <h3 class="h2 mb-3">Das Büro - Digital Design Studio | Client Cases</h3>
+                            <p>In this currently ongoing project, our team of 8 is working as a digital design bureau, delivering visual identity, branding, Figma prototypes and more for real clients. The focus is on creating user‑centred, impactful designs that meet client needs while maintaining strong creative cohesion.</p>
+                            <p class="mb-2"><strong>My contributions:</strong></p>
+                            <ul>
+                                <li>Leading project coordination for a distributed team, including task delegation, stand‑up meetings, and overall workflow management using Kanban and the Double Diamond design process.</li>
+                                <li>Conducting UX research, client interviews, and managing client communication to ensure designs align with business goals.</li>
+                                <li>Supporting design work through Figma prototypes and contributing to visual identity development.</li>
+                            </ul>
+                            <p>Through this role, I am strengthening my project management skills, cross‑timezone team coordination, client communication, and UX‑focused design process.</p>
+                        </div>
+                    </div>
+
+                    <!-- Gestalt – Digital Magazine -->
+                    <div class="row align-items-center g-5 project-row">
+                        <div class="col-12 col-lg-6">
+                            <img src="img/juiceorganic.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <h3 class="h2 mb-1">Gestalt - Digital Magazine | Visual design</h3>
+                            <p class="text-muted mb-3"><em>Theme: Echo Chambers</em></p>
+                            <p><em>Gestalt</em> is a collaborative digital magazine developed as part of the <em>Visual Design for Digital Platforms</em> course at Zealand. The 2025 issue explores the theme <em>Echo Chambers</em> and how digital media shape our perception of reality.</p>
+                            <p>I contributed an article interpreting the theme through both text and visuals. My work included writing, designing layouts, and taking all photographs. Throughout the project, I applied principles of grid systems, visual hierarchy, and typography to create a cohesive and engaging editorial narrative.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -69,7 +125,7 @@
                         <a href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" class="social-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <p class="mt-3">&copy; 2025 Edda Ósk Óskarsdóttir. All rights reserved.</p>
+                        <p class="mt-3">&copy; <span class="js-current-year"></span> Edda Ósk Óskarsdóttir. All rights reserved.</p>
                     </div>
                 </div>
             </div>
