--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&family=Rubik:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet" />
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
@@ -16,7 +16,9 @@
     <body>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html">EOÓ</a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo-gold.svg" alt="Edda Ósk logo" height="40" />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,7 +28,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="about.html">About</a>
+                            <a class="nav-link active" href="about.html">About me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
@@ -39,16 +41,67 @@
             </div>
         </nav>
 
-        <section class="about py-5">
+        <!-- Bio -->
+        <section class="py-5">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center mb-5">
-                        <h1 class="display-4">About Me</h1>
+                <div class="row align-items-start g-5">
+                    <div class="col-md-5 text-center">
+                        <img src="img/edda.jpg" alt="Portrait of Edda Ósk Óskarsdóttir" class="img-fluid rounded-3 shadow-sm" loading="lazy" />
+                    </div>
+                    <div class="col-md-7">
+                        <h1 class="display-4 mb-4">About me</h1>
+                        <p class="fs-5 mb-4">Hello, I'm Edda — a multimedia design student at Zealand, currently in my third semester. I specialize in UX research, information architecture, and project management, turning messy challenges into clear, user-centered solutions.</p>
+
+                        <h2 class="h3 text-primary mt-4 mb-3">How I work</h2>
+                        <p class="fs-5 mb-4">I believe great digital experiences come from clarity, empathy, and teamwork. In practice, that means thorough user research, thoughtful IA, and transparent coordination that keeps everyone aligned and valued. My tagline, <em>From complexity to clarity</em>, guides every project I undertake.</p>
+
+                        <h2 class="h3 text-primary mt-4 mb-3">What I do</h2>
+                        <p class="fs-5">I'm open to a wide range of digital design work, from UX research and information architecture to UI, magazine design, prototyping, and beyond. Whether it's a product interface, a content-driven platform, or a multidisciplinary project, I bring a calm, methodical approach, strong collaboration, and a focus on delivering meaningful results.</p>
                     </div>
                 </div>
-                <div class="row justify-content-center">
+            </div>
+        </section>
+
+        <!-- Focus areas -->
+        <section class="py-5">
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-lg-8 mx-auto text-center">
+                        <h2 class="h1 mb-3">Focus areas</h2>
+                        <p class="fs-5 text-muted">A calm, methodical approach with strong collaboration and meaningful outcomes.</p>
+                    </div>
+                </div>
+                <div class="row g-5">
+                    <div class="col-md-6 mb-4">
+                        <h3 class="h4 text-primary mb-3">UX & Design</h3>
+                        <p class="skill-set mb-0">User Research · Personas · User Journeys · Information Architecture · Figma Prototyping · Accessibility</p>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <h3 class="h4 text-primary mb-3">Development</h3>
+                        <p class="skill-set mb-0">Front-End Coding (HTML, SCSS, JavaScript, Bootstrap) · Interactive Prototypes</p>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <h3 class="h4 text-primary mb-3">Visual Communication</h3>
+                        <p class="skill-set mb-0">Branding · Visual Identity · Layout Design · Motion Design (After Effects) · Photography</p>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <h3 class="h4 text-primary mb-3">Project Management</h3>
+                        <p class="skill-set mb-0">Team Coordination · Agile / Kanban · Client Communication · Double Diamond Process · Design Thinking · Lean Startup</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer CTA -->
+        <section class="about-section bg-light py-5">
+            <div class="container">
+                <div class="row align-items-center">
                     <div class="col-lg-8">
-                        <p class="lead">[Your introduction and background here]</p>
+                        <h2 class="h3 mb-2">Have a project or idea? I’m just a LinkedIn connection away.</h2>
+                        <p class="mb-0">Whether product, content, or multidisciplinary work, I'm ready to help.</p>
+                    </div>
+                    <div class="col-lg-4 text-lg-end mt-3 mt-lg-0">
+                        <a href="https://www.linkedin.com/in/eddaoskarsdottir/" class="btn btn-primary btn-lg">Connect with me</a>
                     </div>
                 </div>
             </div>
