--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&family=Rubik:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet" />
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
@@ -16,7 +16,9 @@
     <body>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html">EÓÓ</a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo-gold.svg" alt="Edda Ósk logo" height="40" />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,7 +28,7 @@
                             <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="about.html">About me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
@@ -41,10 +43,13 @@
 
         <section class="hero">
             <div class="container">
-                <div class="row min-vh-100 align-items-center">
-                    <div class="col-12 text-center">
-                        <h1 class="display-1">EDDA ÓSK ÓSKARSDÓTTIR</h1>
-                        <p class="lead">MULTIMEDIA DESIGNER</p>
+                <div class="row min-vh-100">
+                    <div class="col-12 text-center d-flex flex-column justify-content-center">
+                        <div class="hero-content">
+                            <h1 class="display-1 mb-3">EDDA ÓSK ÓSKARSDÓTTIR</h1>
+                            <p class="lead mb-5">MULTIMEDIA DESIGN STUDENT</p>
+                            <p class="tagline">From complexity to clarity — putting users at the heart of design</p>
+                        </div>
                     </div>
                 </div>
             </div>
