--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&family=Rubik:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet" />
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
@@ -16,7 +16,9 @@
     <body>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html">EOÓ</a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo-gold.svg" alt="Edda Ósk logo" height="40" />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,7 +28,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="about.html">About me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="projects.html">Projects</a>
@@ -48,7 +50,7 @@
                 </div>
                 <div class="project-list">
                     <!-- Example project row template (image left on desktop, stacked on mobile) -->
-                    <div class="row align-items-center g-5 project-row">
+                    <div class="row align-items-start g-5 project-row">
                         <!-- Image column -->
                         <div class="col-12 col-lg-6">
                             <!-- Replace src with your image path in the img/ folder -->
@@ -59,40 +61,36 @@
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-3">JuicOrganic – <em>“Say Yes to Less Plastic”</em> | SaaS-solution</h3>
                             <p>For our 2nd-semester exam project, we developed a SaaS-based concept for JuicOrganic’s transition from B2B to B2C. The solution centered on a smart vending machine that offers sustainable juice refills and promotes eco-friendly habits through digital interactivity.</p>
-                            <p>
-                                <strong>My contributions:</strong><br />
-                                I worked on <strong>UX research</strong> (interviews, personas, user journeys, and data analysis), <strong>information architecture</strong>, and <strong>front-end coding</strong> using JavaScript, HTML, SCSS, and Bootstrap. Additionally, I created the <strong>After Effects video</strong> used as the vending machine’s <strong>promotional video</strong> and social media campaign element.
-                            </p>
-                            <p>The result was a <strong>user-centered</strong> prototype <strong>combining</strong> sustainability, accessibility, and technology in a cohesive digital experience.</p>
-                            <p class="mb-0"><strong>Coded prototype</strong> <a href="https://eddaosk.github.io/JuicOrganic/index.html" class="link-primary">here</a></p>
+
+                            <p>I worked on UX research (interviews, personas, user journeys, and data analysis), information architecture, and front-end coding using JavaScript, HTML, SCSS, and Bootstrap. Additionally, I created the After Effects video used as the vending machine's promotional video and social media campaign element.</p>
+                            <p>The result was a user-centered prototype combining sustainability, accessibility, and technology in a cohesive digital experience.</p>
+                            <p class="mb-0">View the <a href="https://eddaosk.github.io/JuicOrganic/index.html" class="link-primary">coded prototype</a></p>
                         </div>
                     </div>
 
                     <!-- Hoedown After Dark -->
-                    <div class="row align-items-center g-5 project-row">
+                    <div class="row align-items-start g-5 project-row">
                         <div class="col-12 col-lg-6">
-                            <img src="img/juiceorganic.png" class="img-fluid rounded" alt="Hoedown After Dark – Queer Cowboy Apparel project" />
+                            <img src="img/hoedown.jpg" class="img-fluid rounded" alt="Hoedown After Dark – Queer Cowboy Apparel project" />
                         </div>
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-3">Hoedown After Dark - Queer Cowboy Apparel | E‑commerce Project</h3>
                             <p>For this project, we developed <em>Hoedown After Dark</em> — a queer and kink‑inspired fashion brand celebrating self‑expression, club culture, and community. The concept merges Western aesthetics with techno and fetish influences to create a bold, subversive visual identity.</p>
-                            <p>
-                                <strong>My contributions:</strong><br />
-                                I managed the group project process using a Kanban board and worked on SEO, business modelling, persuasive design, Figma prototyping, and product development. I also contributed to SoMe content and visual identity design.
-                            </p>
-                            <p>The result was a strong brand identity and tested product designs developed through the Lean Startup method, real‑world feedback, and close engagement with Copenhagen’s queer community. All earnings from the project were donated to LGBT Asylum.</p>
+                            <p>I managed the group project process using a Kanban board and worked on SEO, business modelling, persuasive design, Figma prototyping, and product development and packaging. I also contributed to SoMe content and visual identity design.</p>
+                            <p>The result was a strong brand identity and tested product designs developed through the Lean Startup method, real‑world feedback, and close engagement with Copenhagen's queer community. All earnings from the project were donated to LGBT Asylum.</p>
+                            <p class="mb-0">Visit the <a href="https://melodive.dk/webshop/wordpress/" class="link-primary">webshop</a></p>
                         </div>
                     </div>
 
                     <!-- Das Büro – Digital Design Studio -->
-                    <div class="row align-items-center g-5 project-row">
+                    <div class="row align-items-start g-5 project-row">
                         <div class="col-12 col-lg-6">
-                            <img src="img/juiceorganic.png" class="img-fluid rounded" alt="Das Büro – Digital Design Studio client cases" />
+                            <img src="img/dasburo.png" class="img-fluid rounded" alt="Das Büro – Digital Design Studio client cases" />
                         </div>
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-3">Das Büro - Digital Design Studio | Client Cases</h3>
                             <p>In this currently ongoing project, our team of 8 is working as a digital design bureau, delivering visual identity, branding, Figma prototypes and more for real clients. The focus is on creating user‑centred, impactful designs that meet client needs while maintaining strong creative cohesion.</p>
-                            <p class="mb-2"><strong>My contributions:</strong></p>
+                            <h4 class="h5 mt-4 mb-3">My role</h4>
                             <ul>
                                 <li>Leading project coordination for a distributed team, including task delegation, stand‑up meetings, and overall workflow management using Kanban and the Double Diamond design process.</li>
                                 <li>Conducting UX research, client interviews, and managing client communication to ensure designs align with business goals.</li>
@@ -103,9 +101,9 @@
                     </div>
 
                     <!-- Gestalt – Digital Magazine -->
-                    <div class="row align-items-center g-5 project-row">
+                    <div class="row align-items-start g-5 project-row">
                         <div class="col-12 col-lg-6">
-                            <img src="img/juiceorganic.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
+                            <img src="img/gestaltarticle.jpg" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
                         </div>
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-1">Gestalt - Digital Magazine | Visual design</h3>
