Final layout edits and content edits.

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/responsive.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg">
@@ -28,13 +29,10 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="about.html">About me</a>
+                            <a class="nav-link active" href="about.html">About Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -50,49 +48,19 @@
                     </div>
                     <div class="col-md-7">
                         <h1 class="display-4 mb-4">About me</h1>
-                        <p class="fs-5 mb-4">Hello, I'm Edda — a multimedia design student at Zealand, currently in my third semester. I specialize in UX research, information architecture, and project management, turning messy challenges into clear, user-centered solutions.</p>
+                        <p class="fs-5 mb-4">Hello, I'm Edda — a multimedia design student at Zealand Academy of Technologies and Business, currently in my third semester. I specialize in UX research, visual design and project management, turning complex challenges into clear, human-centered solutions.</p>
 
                         <h2 class="h3 text-primary mt-4 mb-3">How I work</h2>
-                        <p class="fs-5 mb-4">I believe great digital experiences come from clarity, empathy, and teamwork. In practice, that means thorough user research, thoughtful IA, and transparent coordination that keeps everyone aligned and valued. My tagline, <em>From complexity to clarity</em>, guides every project I undertake.</p>
+                        <p class="fs-5 mb-4">I believe great digital experiences come from clarity, empathy, and teamwork. To me, that means understanding real user needs, building thoughtful structures, and keeping collaboration open and honest. I love creating clean, visually balanced interfaces that are grounded in research and reflect how people actually think and interact.</p>
 
-                        <h2 class="h3 text-primary mt-4 mb-3">What I do</h2>
-                        <p class="fs-5">I'm open to a wide range of digital design work, from UX research and information architecture to UI, magazine design, prototyping, and beyond. Whether it's a product interface, a content-driven platform, or a multidisciplinary project, I bring a calm, methodical approach, strong collaboration, and a focus on delivering meaningful results.</p>
+                        <h2 class="h3 text-primary mt-4 mb-3">What I can do</h2>
+                        <p class="fs-5">I enjoy working across a wide range of digital design - from UX research and information architecture to UI, magazine design, prototyping, and coding. I tend to find something interesting and challenging in everything I do, and I like combining creativity and technical skills to bring ideas to life. I approach projects with a calm, methodical mindset, enjoy collaborating closely with others, and focus on creating work that delivers meaningful results.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Focus areas -->
-        <section class="py-5">
-            <div class="container">
-                <div class="row mb-4">
-                    <div class="col-lg-8 mx-auto text-center">
-                        <h2 class="h1 mb-3">Focus areas</h2>
-                        <p class="fs-5 text-muted">A calm, methodical approach with strong collaboration and meaningful outcomes.</p>
-                    </div>
-                </div>
-                <div class="row g-5">
-                    <div class="col-md-6 mb-4">
-                        <h3 class="h4 text-primary mb-3">UX & Design</h3>
-                        <p class="skill-set mb-0">User Research · Personas · User Journeys · Information Architecture · Figma Prototyping · Accessibility</p>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                        <h3 class="h4 text-primary mb-3">Development</h3>
-                        <p class="skill-set mb-0">Front-End Coding (HTML, SCSS, JavaScript, Bootstrap) · Interactive Prototypes</p>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                        <h3 class="h4 text-primary mb-3">Visual Communication</h3>
-                        <p class="skill-set mb-0">Branding · Visual Identity · Layout Design · Motion Design (After Effects) · Photography</p>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                        <h3 class="h4 text-primary mb-3">Project Management</h3>
-                        <p class="skill-set mb-0">Team Coordination · Agile / Kanban · Client Communication · Double Diamond Process · Design Thinking · Lean Startup</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Footer CTA -->
+        <!-- LinkedIn CTA -->
         <section class="about-section bg-light py-5">
             <div class="container">
                 <div class="row align-items-center">
@@ -100,8 +68,86 @@
                         <h2 class="h3 mb-2">Have a project or idea? I’m just a LinkedIn connection away.</h2>
                         <p class="mb-0">Whether product, content, or multidisciplinary work, I'm ready to help.</p>
                     </div>
-                    <div class="col-lg-4 text-lg-end mt-3 mt-lg-0">
-                        <a href="https://www.linkedin.com/in/eddaoskarsdottir/" class="btn btn-primary btn-lg">Connect with me</a>
+                    <div class="col-lg-4 text-lg-end mt-3 mt-lg-0"><a href="https://www.linkedin.com/in/eddaoskarsdottir/" class="btn btn-primary btn-lg">Connect with me</a></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Skill -->
+        <section class="py-5 skill-section">
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-lg-8 mx-auto text-center">
+                        <h2 class="h1 mb-3">Skills</h2>
+                    </div>
+                </div>
+                <div class="row g-4 mb-5">
+                    <div class="col-md-6 mb-4 text-center">
+                        <h3 class="h4 text-primary mb-3">UX & Design</h3>
+                        <p class="skill-set mb-0">User Research · Personas · User Journeys · Information Architecture · Figma Prototyping · Accessibility</p>
+                    </div>
+                    <div class="col-md-6 mb-4 text-center">
+                        <h3 class="h4 text-primary mb-3">Development</h3>
+                        <p class="skill-set mb-0">Front-End Coding (HTML, SCSS, JavaScript, Bootstrap) · Interactive Prototypes</p>
+                    </div>
+                    <div class="col-md-6 mb-4 text-center">
+                        <h3 class="h4 text-primary mb-3">Visual Communication</h3>
+                        <p class="skill-set mb-0">Branding · Visual Identity · Layout Design · Motion Design (After Effects) · Photography</p>
+                    </div>
+                    <div class="col-md-6 mb-4 text-center">
+                        <h3 class="h4 text-primary mb-3">Project Management</h3>
+                        <p class="skill-set mb-0">Team Coordination · Agile / Kanban · Client Communication · Double Diamond Process · Design Thinking · Lean Startup</p>
+                    </div>
+                </div>
+
+                <!-- Tools & Software -->
+                <div class="row mt-5 pt-5">
+                    <div class="col-12 text-center mb-4">
+                        <h3 class="h2">Tools & Software</h3>
+                    </div>
+                    <div class="col-12">
+                        <div class="row g-4 justify-content-center align-items-center">
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/figma.png" alt="Figma" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">Figma</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/indesign.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">InDesign</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/photoshop.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">Photoshop</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/illustrator.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">Illustrator</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/after-effects.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">After Effects</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/photoshop-lightroom.png" alt="Lightroom" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">Lightroom</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/canva.jpeg" alt="Canva" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">Canva</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/procreate.png" alt="Procreate" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">Procreate</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/vsc.svg" alt="Visual studio code" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">VSC</p>
+                            </div>
+                            <div class="col-6 col-md-3 text-center">
+                                <img src="img/tools/github-mark.svg" alt="GitHub" class="img-fluid tool-logo" style="height: 40px" />
+                                <p class="mt-2 mb-0 tool-name">GitHub</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
