--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/responsive.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg">
@@ -28,13 +29,10 @@
                             <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About me</a>
+                            <a class="nav-link" href="about.html">About Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -42,15 +40,21 @@
         </nav>
 
         <section class="hero">
+            <div class="container text-center">
+                <div class="hero-content">
+                    <h1 class="display-1 mb-3">EDDA ÓSK ÓSKARSDÓTTIR</h1>
+                    <p class="lead mb-4">MULTIMEDIA DESIGN STUDENT</p>
+                    <p class="tagline">From complexity to clarity — putting users at the heart of design</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="intro-text">
             <div class="container">
-                <div class="row min-vh-100">
-                    <div class="col-12 text-center d-flex flex-column justify-content-center">
-                        <div class="hero-content">
-                            <h1 class="display-1 mb-3">EDDA ÓSK ÓSKARSDÓTTIR</h1>
-                            <p class="lead mb-5">MULTIMEDIA DESIGN STUDENT</p>
-                            <p class="tagline">From complexity to clarity — putting users at the heart of design</p>
-                        </div>
-                    </div>
+                <p class="intro-description mx-auto">Hi, I'm Edda — a multimedia design student with a BA in Anthropology and a Master's in Tourism. I'm passionate about turning complex ideas into clear, human-centered digital experiences. My background gives me a unique perspective on people and behavior, which I combine with design to create solutions that are intuitive, practical, and visually engaging.</p>
+
+                <div class="intro-logo">
+                    <img src="img/logo-indigo.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
             </div>
         </section>
