--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/responsive.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg">
@@ -28,7 +29,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About me</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="projects.html">Projects</a>
@@ -76,7 +77,7 @@
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-3">Hoedown After Dark - Queer Cowboy Apparel | E‑commerce Project</h3>
                             <p>For this project, we developed <em>Hoedown After Dark</em> — a queer and kink‑inspired fashion brand celebrating self‑expression, club culture, and community. The concept merges Western aesthetics with techno and fetish influences to create a bold, subversive visual identity.</p>
-                            <p>I managed the group project process using a Kanban board and worked on SEO, business modelling, persuasive design, Figma prototyping, and product development and packaging. I also contributed to SoMe content and visual identity design.</p>
+                            <p>I managed the group project process using a Kanban board and worked on SEO, business modelling, persuasive design, Figma prototyping, and product development. I also contributed to SoMe content and visual identity design.</p>
                             <p>The result was a strong brand identity and tested product designs developed through the Lean Startup method, real‑world feedback, and close engagement with Copenhagen's queer community. All earnings from the project were donated to LGBT Asylum.</p>
                             <p class="mb-0">Visit the <a href="https://melodive.dk/webshop/wordpress/" class="link-primary">webshop</a></p>
                         </div>
@@ -90,7 +91,7 @@
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-3">Das Büro - Digital Design Studio | Client Cases</h3>
                             <p>In this currently ongoing project, our team of 8 is working as a digital design bureau, delivering visual identity, branding, Figma prototypes and more for real clients. The focus is on creating user‑centred, impactful designs that meet client needs while maintaining strong creative cohesion.</p>
-                            <h4 class="h5 mt-4 mb-3">My role</h4>
+                            <h4 class="h5 mt-4 mb-3">My roleS</h4>
                             <ul>
                                 <li>Leading project coordination for a distributed team, including task delegation, stand‑up meetings, and overall workflow management using Kanban and the Double Diamond design process.</li>
                                 <li>Conducting UX research, client interviews, and managing client communication to ensure designs align with business goals.</li>
@@ -103,13 +104,13 @@
                     <!-- Gestalt – Digital Magazine -->
                     <div class="row align-items-start g-5 project-row">
                         <div class="col-12 col-lg-6">
-                            <img src="img/gestaltarticle.jpg" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
+                            <img src="img/posters-mockups.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
                         </div>
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-1">Gestalt - Digital Magazine | Visual design</h3>
                             <p class="text-muted mb-3"><em>Theme: Echo Chambers</em></p>
                             <p><em>Gestalt</em> is a collaborative digital magazine developed as part of the <em>Visual Design for Digital Platforms</em> course at Zealand. The 2025 issue explores the theme <em>Echo Chambers</em> and how digital media shape our perception of reality.</p>
-                            <p>I contributed an article interpreting the theme through both text and visuals. My work included writing, designing layouts, and taking all photographs. Throughout the project, I applied principles of grid systems, visual hierarchy, and typography to create a cohesive and engaging editorial narrative.</p>
+                            <p>I contributed an article interpreting the theme through both text and visuals. My work included writing, designing layouts and posters, and taking all photographs. Throughout the project, I applied principles of grid systems, visual hierarchy, and typography to create a cohesive and engaging editorial narrative.</p>
                         </div>
                     </div>
                 </div>
