changed logo on index to gold from indigo.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p class="intro-description mx-auto">Hi, I'm Edda — a multimedia design student with a BA in Anthropology and a Master's in Tourism. I'm passionate about turning complex ideas into clear, human-centered digital experiences. My background gives me a unique perspective on people and behavior, which I combine with design to create solutions that are intuitive, practical, and visually engaging.</p>
 
                 <div class="intro-logo">
-                    <img src="img/logo-indigo.svg" alt="Edda Ósk logo" class="intro-logo-img" />
+                    <img src="img/logo-gold.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
             </div>
         </section>
