--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/responsive.css" />
+        <link rel="icon" href="img/logo-gold.svg" type="image/svg+xml" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg">
