added shecodes workshops to projects

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 
                             <p>I worked on UX research (interviews, personas, user journeys, and data analysis), information architecture, and front-end coding using JavaScript, HTML, SCSS, and Bootstrap. Additionally, I created the After Effects video used as the vending machine's promotional video and social media campaign element.</p>
                             <p>The result was a user-centered prototype combining sustainability, accessibility, and technology in a cohesive digital experience.</p>
-                            <p class="mb-0">View the <a href="https://eddaosk.github.io/JuicOrganic/index.html" class="link-primary">coded prototype</a></p>
+                            <p class="mb-0">View the <a href="https://eddaosk.github.io/JuicOrganic/index.html" target="_blank" class="link-primary">coded prototype</a></p>
                         </div>
                     </div>
 
@@ -77,7 +77,7 @@
                             <p>For this project, we developed <em>Hoedown After Dark</em> — a queer and kink‑inspired fashion brand celebrating self‑expression, club culture, and community. The concept merges Western aesthetics with techno and fetish influences to create a bold, subversive visual identity.</p>
                             <p>I managed the group project process using a Kanban board and worked on SEO, business modelling, persuasive design, Figma prototyping, and product development. I also contributed to SoMe content and visual identity design.</p>
                             <p>The result was a strong brand identity and tested product designs developed through the Lean Startup method, real‑world feedback, and close engagement with Copenhagen's queer community. All earnings from the project were donated to LGBT Asylum.</p>
-                            <p class="mb-0">Visit the <a href="https://melodive.dk/webshop/wordpress/" class="link-primary">webshop</a></p>
+                            <p class="mb-0">Visit the <a href="https://melodive.dk/webshop/wordpress/" target="_blank" class="link-primary">webshop</a></p>
                         </div>
                     </div>
 
@@ -109,6 +109,17 @@
                             <p class="text-muted mb-3"><em>Theme: Echo Chambers</em></p>
                             <p><em>Gestalt</em> is a collaborative digital magazine developed as part of the <em>Visual Design for Digital Platforms</em> course at Zealand. The 2025 issue explores the theme <em>Echo Chambers</em> and how digital media shape our perception of reality.</p>
                             <p>I contributed an article interpreting the theme through both text and visuals. My work included writing, designing layouts and posters, and taking all photographs. Throughout the project, I applied principles of grid systems, visual hierarchy, and typography to create a cohesive and engaging editorial narrative.</p>
+                        </div>
+                    </div>
+                    <!-- SheCodes -->
+                    <div class="row align-items-start g-5 project-row">
+                        <div class="col-12 col-lg-6">
+                            <img src="img/shecodes.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <h3 class="h2 mb-1">SheCodes | Online Coding Course</h3>
+                            <p>In my free time, I've been taken online courses with SheCodes to further develop my coding skills beyond the classroom. This has helped me deepen my knowledge of HTML, CSS, and JavaScript, and gain more hands-on experience with responsive and user-friendly web design.</p>
+                            <p class="mb-0">View my <a href="https://www.shecodes.io/graduates/170708-edda-oskarsdottir" target="_blank" class="link-primary">SheCodes profile</a></p>
                         </div>
                     </div>
                 </div>
