--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-1">SheCodes | Online Coding Course</h3>
-                            <p>In my free time, I've been taken online courses with SheCodes to further develop my coding skills beyond the classroom. This has helped me deepen my knowledge of HTML, CSS, and JavaScript, and gain more hands-on experience with responsive and user-friendly web design.</p>
+                            <p>In my free time, I've been taking online courses with SheCodes to further develop my coding skills beyond the classroom. This has helped me deepen my knowledge of HTML, CSS, and JavaScript, and gain more hands-on experience with responsive and user-friendly web design.</p>
                             <p class="mb-0">View my <a href="https://www.shecodes.io/graduates/170708-edda-oskarsdottir" target="_blank" class="link-primary">SheCodes profile</a></p>
                         </div>
                     </div>
