--- a/projects.html
+++ b/projects.html
@@ -89,10 +89,10 @@
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-3">Das Büro - Digital Design Studio | Client Cases</h3>
                             <p>In this currently ongoing project, our team of 8 is working as a digital design bureau, delivering visual identity, branding, Figma prototypes and more for real clients. The focus is on creating user‑centred, impactful designs that meet client needs while maintaining strong creative cohesion.</p>
-                            <h4 class="h5 mt-4 mb-3">My roleS</h4>
+                            <h4 class="h5 mt-4 mb-3">My roles</h4>
                             <ul>
                                 <li>Leading project coordination for a distributed team, including task delegation, stand‑up meetings, and overall workflow management using Kanban and the Double Diamond design process.</li>
-                                <li>Conducting UX research, client interviews, and managing client communication to ensure designs align with business goals.</li>
+                                <li>Conducting UX research, client meetings, and managing client communication to ensure designs align with business goals.</li>
                                 <li>Supporting design work through Figma prototypes and contributing to visual identity development.</li>
                             </ul>
                             <p>Through this role, I am strengthening my project management skills, cross‑timezone team coordination, client communication, and UX‑focused design process.</p>
