text edit in projects

--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                             <p class="text-muted mb-3"><em>Theme: Echo Chambers</em></p>
                             <p><em>Gestalt</em> is a collaborative digital magazine developed as part of the <em>Visual Design for Digital Platforms</em> course at Zealand. The 2025 issue explores the theme <em>Echo Chambers</em> and how digital media shape our perception of reality.</p>
                             <p>I contributed an article interpreting the theme through both text and visuals. My work included writing, designing layouts and posters, and taking all photographs. Throughout the project, I applied principles of grid systems, visual hierarchy, and typography to create a cohesive and engaging editorial narrative.</p>
-                            <p class="mb-0">Read the <a href="https://heyzine.com/flip-book/28e8dc8430.html#page/49" target="_blank" class="link-primary">article here</a></p>
+                            <p class="mb-0">Read the <a href="https://heyzine.com/flip-book/28e8dc8430.html#page/49" target="_blank" class="link-primary">article</a></p>
                         </div>
                     </div>
                     <!-- SheCodes -->
