text edits in projects

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 
                             <p>I worked on UX research (interviews, personas, user journeys, and data analysis), information architecture, and front-end coding using JavaScript, HTML, SCSS, and Bootstrap. Additionally, I created the After Effects video used as the vending machine's promotional video and social media campaign element.</p>
                             <p>The result was a user-centered prototype combining sustainability, accessibility, and technology in a cohesive digital experience.</p>
-                            <p class="mb-0">View the <a href="https://eddaosk.github.io/JuicOrganic/index.html" target="_blank" class="link-primary">coded prototype (optimised for iPad Pro)</a></p>
+                            <p class="mb-0">View the <a href="https://eddaosk.github.io/JuicOrganic/index.html" target="_blank" class="link-primary">coded prototype</a>(optimised for iPad Pro)</p>
                         </div>
                     </div>
 
