--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="about.html">About Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="projects.html">Projects</a>
