--- a/about.html
+++ b/about.html
@@ -100,55 +100,57 @@
                         <p class="skill-set mb-0">Team Coordination · Agile / Kanban · Client Communication · Double Diamond Process · Design Thinking · Lean Startup</p>
                     </div>
                 </div>
+            </div>
+        </section>
 
-                <!-- Tools & Software -->
-                <div class="row mt-5 pt-5">
-                    <div class="col-12 text-center mb-4">
-                        <h3 class="h2">Tools & Software</h3>
+        <!-- Tools & Software -->
+        <section class="py-5 tools-section">
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-lg-8 mx-auto text-center">
+                        <h2 class="h1 mb-3">Tools & Software</h2>
                     </div>
-                    <div class="col-12">
-                        <div class="row g-4 justify-content-center align-items-center">
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/figma.png" alt="Figma" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">Figma</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/indesign.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">InDesign</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/photoshop.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">Photoshop</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/illustrator.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">Illustrator</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/after-effects.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">After Effects</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/photoshop-lightroom.png" alt="Lightroom" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">Lightroom</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/canva.jpeg" alt="Canva" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">Canva</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/procreate.png" alt="Procreate" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">Procreate</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/vsc.svg" alt="Visual studio code" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">VSC</p>
-                            </div>
-                            <div class="col-6 col-md-3 text-center">
-                                <img src="img/tools/github-mark.svg" alt="GitHub" class="img-fluid tool-logo" style="height: 40px" />
-                                <p class="mt-2 mb-0 tool-name">GitHub</p>
-                            </div>
-                        </div>
+                </div>
+                <div class="row g-4 justify-content-center align-items-center">
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/figma.png" alt="Figma" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Figma</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/indesign.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">InDesign</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/photoshop.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Photoshop</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/illustrator.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Illustrator</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/after-effects.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">After Effects</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/photoshop-lightroom.png" alt="Lightroom" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Lightroom</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/canva.jpeg" alt="Canva" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Canva</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/procreate.png" alt="Procreate" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Procreate</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/vsc.svg" alt="Visual studio code" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">VSC</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/github-mark.svg" alt="GitHub" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">GitHub</p>
                     </div>
                 </div>
             </div>
