fixed horizontal scrolling problems, improved stylesheet, consolidated responsive styling into the main SCSS file

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css" />
-        <link rel="stylesheet" href="css/responsive.css" />
         <link rel="icon" href="img/logo-gold.svg" type="image/svg+xml" />
     </head>
     <body>
@@ -49,7 +48,7 @@
                 </div>
                 <div class="project-list">
                     <!-- Example project row template (image left on desktop, stacked on mobile) -->
-                    <div class="row align-items-start g-5 project-row">
+                    <div class="row align-items-start g-3 g-lg-5 project-row">
                         <!-- Image column -->
                         <div class="col-12 col-lg-6">
                             <!-- Replace src with your image path in the img/ folder -->
@@ -68,7 +67,7 @@
                     </div>
 
                     <!-- Hoedown After Dark -->
-                    <div class="row align-items-start g-5 project-row">
+                    <div class="row align-items-start g-3 g-lg-5 project-row">
                         <div class="col-12 col-lg-6">
                             <img src="img/hoedown.jpg" class="img-fluid rounded" alt="Hoedown After Dark – Queer Cowboy Apparel project" />
                         </div>
@@ -82,7 +81,7 @@
                     </div>
 
                     <!-- Das Büro – Digital Design Studio -->
-                    <div class="row align-items-start g-5 project-row">
+                    <div class="row align-items-start g-3 g-lg-5 project-row">
                         <div class="col-12 col-lg-6">
                             <img src="img/dasburo.png" class="img-fluid rounded" alt="Das Büro – Digital Design Studio client cases" />
                         </div>
@@ -100,7 +99,7 @@
                     </div>
 
                     <!-- Gestalt – Digital Magazine -->
-                    <div class="row align-items-start g-5 project-row">
+                    <div class="row align-items-start g-3 g-lg-5 project-row">
                         <div class="col-12 col-lg-6">
                             <img src="img/posters-mockups.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
                         </div>
@@ -113,7 +112,7 @@
                         </div>
                     </div>
                     <!-- SheCodes -->
-                    <div class="row align-items-start g-5 project-row">
+                    <div class="row align-items-start g-3 g-lg-5 project-row">
                         <div class="col-12 col-lg-6">
                             <img src="img/shecodes.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project" />
                         </div>
