--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css" />
-        <link rel="stylesheet" href="css/responsive.css" />
         <link rel="icon" href="img/logo-gold.svg" type="image/svg+xml" />
     </head>
     <body>
@@ -43,7 +42,7 @@
         <!-- Bio -->
         <section class="py-5">
             <div class="container">
-                <div class="row align-items-start g-5">
+                <div class="row align-items-start g-3 g-lg-5">
                     <div class="col-md-5 text-center">
                         <img src="img/edda.jpg" alt="Portrait of Edda Ósk Óskarsdóttir" class="img-fluid rounded-3 shadow-sm" loading="lazy" />
                     </div>
