cropped the about me photo when on mobile so it fits the screen better vertically

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="row align-items-start g-3 g-lg-5">
                     <div class="col-md-5 text-center">
-                        <img src="img/edda.jpg" alt="Portrait of Edda Ósk Óskarsdóttir" class="img-fluid rounded-3 shadow-sm" loading="lazy" />
+                        <img src="img/edda.jpg" alt="Portrait of Edda Ósk Óskarsdóttir" class="img-fluid rounded-3 shadow-sm about-portrait" loading="lazy" />
                     </div>
                     <div class="col-md-7">
                         <h1 class="display-4 mb-4">About me</h1>
