added fallback year for improved accessibility, deleted code that was not in use anymore

--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
                         <a href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" class="social-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <p class="mt-3">&copy; <span class="js-current-year"></span> Edda Ósk Óskarsdóttir. All rights reserved.</p>
+                        <p class="mt-3">&copy; <span class="js-current-year">2025</span> Edda Ósk Óskarsdóttir. All rights reserved.</p>
                     </div>
                 </div>
             </div>
