new hoedown photos

--- a/projects.html
+++ b/projects.html
@@ -117,10 +117,10 @@
                         <div class="col-12 col-lg-6">
                             <div class="row g-3">
                                 <div class="col-12 col-md-6">
-                                    <img src="img/hoedown1.jpg" class="img-fluid rounded" alt="Hoedown After Dark project image 1" />
+                                    <img src="img/hoedown1.png" class="img-fluid rounded" alt="Hoedown After Dark project image 1" />
                                 </div>
                                 <div class="col-12 col-md-6">
-                                    <img src="img/hoedown2.jpg" class="img-fluid rounded" alt="Hoedown After Dark project image 2" />
+                                    <img src="img/hoedown2.png" class="img-fluid rounded" alt="Hoedown After Dark project image 2" />
                                 </div>
                             </div>
                         </div>
